@@ -227,8 +227,8 @@ public class TestTermRangeQuery extends LuceneTestCase {
       }
 
       @Override
-      public final void reset(Reader reader) throws IOException {
-        super.reset(reader);
+      public final void setReader(Reader reader) throws IOException {
+        super.setReader(reader);
         done = false;
       }
     }
